feat: cards specs
